--- a/themes/gophersch/layouts/_default/single.html
+++ b/themes/gophersch/layouts/_default/single.html
@@ -8,6 +8,8 @@
   <h1>{{ .Title }}</h1>
   <span class="post-date">{{ .Date.Format "Mon, Jan 2, 2006" }}</span>
       {{ .Content }}
+
+      {{ template "_internal/disqus.html" . }}
 </div>
 </div>
 
