Reformat google analytics

--- a/themes/gophersch/layouts/partials/head.html
+++ b/themes/gophersch/layouts/partials/head.html
@@ -22,3 +22,4 @@
   <!-- RSS -->
   <link href="{{ .RSSlink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
 </head>
+{{ partial "google_analytics.html" . }}
